--- a/server/package.json
+++ b/server/package.json
@@ -17,11 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.17.2",
+    "morgan": "^1.10.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/http-status-codes": "^1.2.0",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
     "@types/socket.io": "^3.0.1",
     "nodemon": "^3.1.10",
